--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/j">website templates</a></section><section class="header9 cid-r01rcZqkRm mbr-fullscreen mbr-parallax-background" id="header9-8">
+<section class="engine"><a href="https://mobiri.se/f">easy web builder</a></section><section class="header9 cid-r01rcZqkRm mbr-fullscreen mbr-parallax-background" id="header9-8">
 
     
 
@@ -141,7 +141,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form, BHPS is always with you for Valmiki Boya Unity, Development and Empowerment.</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="facaXXp/h7rHgmyns+fB/WPbgmoGY16cS/AM4xvQZhh7+0Nl2r4IQsb/daw8zYZE/qNDFWtbUXWtVSsRrjcWZvLp2kY1qjyfpFfJNskOA/xGt04NfJ6e/MfkqDhRNWH5" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="lfj5Za6bVhdh3QuVwgLuhLy72xlwzD7RADkNA7p/d8OZN21/00AX5Oe/J3gLOK0/mh/ZK3ZfqdT8dK2Mj6BoogLjwIVIVCRFkxooT4KlUS+iZg8tzmVEIjbwmCxPkeCQ" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -202,7 +202,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thanks for filling out the form, BHPS is always with you for Valmiki Boya Unity, Development and Empowerment.</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="CV0xoB0BwowXvowxOJOyTgBZYrUw69K14f9uIvsH0yp2FZn5De9hsIS0MLG8L27DuEICtLGStaO4kMiPyr8MFhnC6Aym+2XHtEHV+OZW8/Hu4zKGY6J2JdLXYlJ+KhOU" data-form-field="Email">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GczEAtLtVrOknbIJRaUZT29utZV4qI8dsmL1MJ6FdYFkf817arcB7mNxK0ySNeGQx3HAT7kkLqxlyXZatyylOabegfQX0TIoTHbxdKINYKHFd9ImfDswhANi2az4hcTl" data-form-field="Email">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-p">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4"><span class="mbri-website-theme mbr-iconfont mbr-iconfont-btn"></span>SUBSCRIBE</button></span>
@@ -224,22 +224,18 @@
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <p class="mbr-text">
                     <strong>Address</strong>
-                    <br>
-                    <br>Flat No: 303,<br>Sai Sandeep Apartment,<br>Krishna Nagar Colony,<br>New Bhoiguda, Bhoiguda, Secunderabad, <br>Telangana, 500025&nbsp;<br>
+<br>Flat No: 303,<br>Sai Sandeep Apartment,<br>Krishna Nagar Colony,<br>New Bhoiguda, Bhoiguda, Secunderabad, <br>Telangana, 500025&nbsp;<br>
                     <br>
                     <br><strong>Contacts</strong>
-                    <br>
-                    <br>Email: apbhps@gmail.com&nbsp;<br>Phone: +919849175645&nbsp;<br>Ph 2: +919985116922</p>
+<br>Email: apbhps@gmail.com&nbsp;<br>Phone: +919849175645&nbsp;<br>Ph 2: +919985116922</p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <p class="mbr-text">
                     <strong>Links</strong>
-                    <br>
-                    <br><a class="text-primary" href="https://www.facebook.com/kranthirebel5" target="_blank">Website builder</a>
+<br><br><a class="text-primary" href="https://www.facebook.com/kranthirebel5" target="_blank">Website builder</a>
                     <br>Kranthi Naidu Boya<br>
-                    <br><strong>Feedback</strong>
-                    <br>
-                    <br>Please send us your ideas, bug reports, suggestions! Any feedback would be appreciated.
+                    <br><strong><a href="https://www.facebook.com/meenagagopi.krishna">Feedback</a></strong><a href="https://www.facebook.com/meenagagopi.krishna">
+</a><br>Please send us your ideas, bug reports, suggestions! Any feedback would be appreciated.
                 </p>
             </div>
             <div class="col-12 col-md-6">
