--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/y">html web templates</a></section><section class="header9 cid-r01rcZqkRm mbr-fullscreen mbr-parallax-background" id="header9-8">
+<section class="engine"><a href="https://mobiri.se/q">responsive site templates</a></section><section class="header9 cid-r01rcZqkRm mbr-fullscreen mbr-parallax-background" id="header9-8">
 
     
 
@@ -129,7 +129,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form, BHPS is always with you for Valmiki Boya Unity, Development and Empowerment.</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="s1BLMCJVkzRMEaPEUD0pxVou2/AgfEG9/0dKDoTj5uhtPpI9lP6jKLVJLp8lYlDja2Zwe6FP4elEe+Wos/VjQqw39ZBSlUp+BLy+v9TUQMYvoOrv/YZqK5jLIiJnc2oA" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="lzfsFXASpNPG6FwXXS5rsVkibQcOZLduxtTPYQ/vy2M+BEU7HsIyBscti8//En+TABaHmcJpPLLf29J/M+1Z/9BFrGuphK8iX6yxrHLA5KwGcuJsP6B6hU3eWPsfMLRe" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -202,7 +202,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thanks for filling out the form, BHPS is always with you for Valmiki Boya Unity, Development and Empowerment.</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="skXZwtExp74eF6qftjzIsfbXBZtmMLo4sViAwxj1rpg3f257A0HEyHmXiZZ7Pl9wG3CoUxZ6V45kgQBtyK9hdaSr8Jim69W3XW/OKfXFrLbWx+M1NEC1Ba+Miqt2P7fX" data-form-field="Email">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ClP1zJ1yzjE5sbsRkAJtO1xBIYjQfeXNF/jbFWyJlhoe4iPm5AAqlPgqPn+2b0wfvlWq65J7DTz0UwRLMfQo1PwIb4sFJWjEzFd3bf3MUQHB5pePRJO5Hm5b5p0XOvjn" data-form-field="Email">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-p">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4"><span class="mbri-website-theme mbr-iconfont mbr-iconfont-btn"></span>SUBSCRIBE</button></span>
