--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/h">create a web page for free</a></section><section class="header9 cid-r01rcZqkRm mbr-fullscreen mbr-parallax-background" id="header9-8">
+<section class="engine"><a href="https://mobiri.se/h">create your own web page</a></section><section class="header9 cid-r01rcZqkRm mbr-fullscreen mbr-parallax-background" id="header9-8">
 
     
 
@@ -129,7 +129,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form, BHPS is always with you for Valmiki Boya Unity, Development and Empowerment.</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="00EC7is7zAfhjiLzJ4rGtlUarwvdMkLye3x9Yljyv2SAw71biFwYyIoetNVXoVGUmslAizx4/9TPuJchul9oJiVCunOMDVzTdZ7LIzE5CLPjGZHBnItl39cgG3txV3CQ" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="741xhmVZgWLNjKYiEMtcNNdFfg8Oc0plZv+DW1zQerQIMwHgX5UNh2Md2n/2zT14zt9SFfC4NOTUWKvacGRtMxWeKxMMK26RkMqFaechqsBL+JSCJM/ADscDdsfNfVxk" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -195,7 +195,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thanks for filling out the form, BHPS is always with you for Valmiki Boya Unity, Development and Empowerment.</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="oDm3G0hMULSOxhu3jkuMiSa99ucKJDA/h0LHtoxkUNPh6/ceBgMTfIRa32jW0DNfpH1rwHoax0sfDp/diWomouJhUj+O4bVWYm7r28C84SE3VH/0fE5v7oaQgBrv4CCU" data-form-field="Email">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="kQzfcbqmqKqQAN0luhzKplUGovXlmX4yduPQihJFCXNPWolIqERFdl8zcBA7R/u3lIEPepXTVCIy2B4tNqXyxPODKowsgt0KwONWS8uGLL6fxbQtiQiCanc6MbOqj8Ws" data-form-field="Email">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-p">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4"><span class="mbri-website-theme mbr-iconfont mbr-iconfont-btn"></span>SUBSCRIBE</button></span>
